PROJECT(dracoshavalidator-test)

FIND_PACKAGE(Boost 1.65 COMPONENTS unit_test_framework REQUIRED)

IF(MSVC)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -W3 -DWIN32 -EHsc -DBOOST_ALL_NO_LIB")
ELSE(MSVC)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fstack-protector-all -fno-omit-frame-pointer")
ENDIF(MSVC)

SET(SOURCES
    ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp
)

ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCES})

SET (VALIDATOR_TEST_SRC ${CMAKE_CURRENT_SOURCE_DIR})

INCLUDE(${CMAKE_CURRENT_SOURCE_DIR}/test.cmake)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} dracoshavalidator ${Boost_LIBRARIES})

ENABLE_TESTING()
ADD_TEST(${PROJECT_NAME} ${PROJECT_NAME})
