PROJECT(dracoshavalidator-test)

SET (Boost_USE_STATIC_LIBS OFF CACHE BOOL "Boost static libs")

FIND_PACKAGE(Boost 1.65 COMPONENTS regex unit_test_framework REQUIRED)

SET(SOURCES
    ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp
)

ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCES})

SET (VALIDATOR_TEST_SRC ${CMAKE_CURRENT_SOURCE_DIR})

INCLUDE(${CMAKE_CURRENT_SOURCE_DIR}/test.cmake)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} dracoshavalidator ${Boost_LIBRARIES})

IF (MSVC)
    SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /bigobj")
ENDIF()

ENABLE_TESTING()
ADD_TEST(${PROJECT_NAME} ${PROJECT_NAME} --log_level=test_suite)
